# xmux

./: .gitignore  Cargo.toml  PROMPT.md  README.md  pixi.toml
.devcontainer/: Dockerfile  devcontainer.json
crates/xmux-agent/: Cargo.toml
crates/xmux-agent/src/: hooks.rs  lib.rs  registry.rs
crates/xmux-browser/: Cargo.toml
crates/xmux-browser/src/: integration.rs  lib.rs  webview.rs
crates/xmux-core/: Cargo.toml
crates/xmux-core/src/: config.rs  error.rs  types.rs
crates/xmux-math/: Cargo.toml
crates/xmux-math/src/: detector.rs  lib.rs  renderer.rs
crates/xmux-notification/: Cargo.toml
crates/xmux-notification/src/: lib.rs  parser.rs
crates/xmux-platform/: Cargo.toml
crates/xmux-platform/src/: lib.rs  linux.rs
crates/xmux-rpc/: Cargo.toml
crates/xmux-rpc/src/: auth.rs  command.rs  handler.rs  lib.rs  protocol.rs  server.rs
crates/xmux-session/: Cargo.toml
crates/xmux-session/src/: autosave.rs  lib.rs  restore.rs  snapshot.rs
crates/xmux-terminal/: Cargo.toml
crates/xmux-terminal/src/: event.rs  lib.rs  pty.rs  terminal.rs
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh  init-env.sh
notes/: PLAN.md  TODO.md
notes/LOGS/: log_implementation.md
src/: cli.rs  git_info.rs  input.rs  main.rs  pane.rs  port_monitor.rs  terminal_view.rs  tmux_shim.rs  workspace.rs
