[workspace]
members = [
    "crates/xmux-core",
    "crates/xmux-platform",
    "crates/xmux-terminal",
    "crates/xmux-notification",
    "crates/xmux-rpc",
]
resolver = "2"

[workspace.dependencies]
xmux-core = { path = "crates/xmux-core" }
xmux-platform = { path = "crates/xmux-platform" }
xmux-terminal = { path = "crates/xmux-terminal" }
xmux-notification = { path = "crates/xmux-notification" }
xmux-rpc = { path = "crates/xmux-rpc" }

uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
alacritty_terminal = "0.26"
arboard = { version = "3", features = ["wayland-data-control"] }
libc = "0.2"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }

[package]
name = "xmux"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.14", features = ["canvas", "tokio"] }
xmux-core.workspace = true
xmux-platform.workspace = true
xmux-terminal.workspace = true
xmux-notification.workspace = true
xmux-rpc.workspace = true
alacritty_terminal.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde_json.workspace = true
libc.workspace = true
